# camera_video_stream

./: CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  Makefile  cameraapp.cc  cameraapp.cpp  cameraapp.h  client.cc  display_image.h  main.cpp  run.sh  udp_client.cpp  udp_client.h
common/: codec.h  common.cc  common.cpp  common.h  protocol.cpp  protocol.h  tcp_socket.h
server/: CMakeLists.txt  Makefile  display_image.cc  display_image.cpp  display_image.h  main.cpp  run.sh  server.cc  udp_server.cpp  udp_server.h
server/include/opencv2/: cvconfig.h  opencv_modules.hpp
server/include/opencv2/core/hal/: interface.h
server/lib/opencv/: .nfs0000000000fa13f000000002  .nfs0000000000fa13fe00000004  libopencv_features2d.so.3.4.3
server/lib/opencv/pkgconfig/: opencv.pc
